--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --main-accent-color: #17222c;
+}
+
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: rgb(197, 197, 197);
@@ -53,8 +57,8 @@ body {
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(12.5px);
   -webkit-backdrop-filter: blur(12.5px);
-  border-radius: 21px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 23px;
+  border: 2px solid var(--main-accent-color);
 }
 
 .message_header {
@@ -62,13 +66,12 @@ body {
   top: 0;
   display: flex;
   align-items: center;
-  background-color: #17222c;
+  background-color: var(--main-accent-color);
   margin: 0;
   padding: 0;
   height: 70px;
   width: 100%;
   border-radius: 20px 20px 0 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
 }
 
 .message_header_container {
@@ -107,9 +110,10 @@ body {
 .chat {
   display: flex;
   flex-flow: column;
-  width: 98%;
+  width: 100%;
   max-height: 77vh;
-  margin: 80px auto 80px auto;
+  margin: 70px auto 80px auto;
+  padding: 0 10px 0 10px;
   overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
@@ -121,19 +125,19 @@ body {
 
 .chat > .bubble {
   border-radius: 1em;
-  padding: 0.25em 0.75em;
+  padding: 0.4em 0.75em;
   margin: 0.0625em;
   max-width: 50%;
 }
 
 .chat > .bubble.sender {
   align-self: flex-start;
-  background-color: cornflowerblue;
+  background-color: var(--main-accent-color);
   color: #fff;
 }
 .chat > .bubble.recipient {
   align-self: flex-end;
-  background-color: #efefef;
+  background-color: #fff;
 }
 
 .chat > .bubble.sender.first {
@@ -162,24 +166,37 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 70px;
+  height: 80px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: var(--main-accent-color);
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
-.send_message input {
-  background-color: #17222c;
+#msg_area {
+  background-color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 1em;
   border-style: hidden;
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+  resize: none;
   border-radius: 20px;
-  height: 60px;
-  width: 85%;
+  height: 40px;
+  min-width: 80%;
+  max-width: 85%;
   padding: 10px;
-  color: #fff;
+  color: rgb(0, 0, 0);
+}
+
+#msg_area::-webkit-scrollbar {
+  width: 0 !important;
 }
 
 .send_message button {
-  background-color: #17222c;
+  background-color: var(--main-accent-color);
   color: #fff;
   font-weight: 800;
   padding: 10px;
@@ -190,6 +207,6 @@ body {
   cursor: pointer;
 }
 
-.send_message input:focus {
+#msg_area:focus {
   outline: none;
 }
